// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package mockgcp.cloud.networkservices.v1;

import "google/longrunning/operations.proto";
import "mockgcp/cloud/networkservices/v1/edgecacheservice.proto";
import "mockgcp/cloud/networkservices/v1/mesh.proto";
import "mockgcp/cloud/networkservices/v1/service_binding.proto";

option go_package = "github.com/GoogleCloudPlatform/k8s-config-connector/mockgcp/generated/mockgcp/cloud/networkservices/v1;networkservices";

service NetworkServices {
  // EdgeCacheService methods
  rpc GetEdgeCacheService(GetEdgeCacheServiceRequest) returns (EdgeCacheService);
  rpc ListEdgeCacheServices(ListEdgeCacheServicesRequest) returns (ListEdgeCacheServicesResponse);
  rpc CreateEdgeCacheService(CreateEdgeCacheServiceRequest) returns (google.longrunning.Operation);
  rpc UpdateEdgeCacheService(UpdateEdgeCacheServiceRequest) returns (google.longrunning.Operation);
  rpc DeleteEdgeCacheService(DeleteEdgeCacheServiceRequest) returns (google.longrunning.Operation);

  // Mesh methods
  rpc GetMesh(GetMeshRequest) returns (Mesh);
  rpc ListMeshes(ListMeshesRequest) returns (ListMeshesResponse);
  rpc CreateMesh(CreateMeshRequest) returns (google.longrunning.Operation);
  rpc UpdateMesh(UpdateMeshRequest) returns (google.longrunning.Operation);
  rpc DeleteMesh(DeleteMeshRequest) returns (google.longrunning.Operation);

  // ServiceBinding methods
  rpc GetServiceBinding(GetServiceBindingRequest) returns (ServiceBinding);
  rpc ListServiceBindings(ListServiceBindingsRequest) returns (ListServiceBindingsResponse);
  rpc CreateServiceBinding(CreateServiceBindingRequest) returns (google.longrunning.Operation);
  rpc DeleteServiceBinding(DeleteServiceBindingRequest) returns (google.longrunning.Operation);
}
